add section about fertilizer

--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -41,6 +41,16 @@ For the moment, the circuitry needs to be powered by an external power source. T
 Any kind of grow media will work, but the one tested so far is [Seramis](https://www.seramis.com/), a fine clay granulate.
 It prevents the fog from spilling out of the cups.
 
+## Nutrient Solution
+
+To cultivate your crops with aeroponics (or hydroponics), you will need a special fertilizer to replace the nutrients which would be provided by the soil.
+
+One product which is recommended [elsewhere](https://www.nosoilsolutions.com/mix-three-part-nutrient-solution) can be found [here](https://www.amazon.com/General-Hydroponics-Flora-Bloom-Fertilizer/dp/B01I4U0M32).
+
+At the moment, only [this product](https://bionovanutrients.com/Bionova-Aero-Supermix/50041Z) is tested with the AeroTower.
+Different types of salad were grown indoors under artificial lighting with a nutrient solution mixed according to manufacturer specifications.
+While the plants did grow, the success was mediocre, which can also be related to the lighting not being powerful enough.
+
 ## Lighting
 
 By intention, lighting is not part of the AeroTower. The tower is designed to supply plants with water and nutrients while being powered by light itself.
