--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -48,8 +48,10 @@ To cultivate your crops with aeroponics (or hydroponics), you will need a specia
 One product which is recommended [elsewhere](https://www.nosoilsolutions.com/mix-three-part-nutrient-solution) can be found [here](https://www.amazon.com/General-Hydroponics-Flora-Bloom-Fertilizer/dp/B01I4U0M32).
 
 At the moment, only [this product](https://bionovanutrients.com/Bionova-Aero-Supermix/50041Z) is tested with the AeroTower.
+
 Different types of salad were grown indoors under artificial lighting with a nutrient solution mixed according to manufacturer specifications.
 While the plants did grow, the success was mediocre, which can also be related to the lighting not being powerful enough.
+The test will be repeated under sunlight soon.
 
 ## Lighting
 
