--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -11,11 +11,11 @@ import { ModelViewer } from '../../components/ModelViewer'
 
 When searching for an inexpensive aeroponics system, which was also scalable and modifiable, not many options were found. That is how this project came to life.
 
-The AeroTower is designed (WIP) to serve as an easy entry for people into the world of aeroponics. You can start at **low cost**, **modify** everything as you build it and finally **scale** the system up, if you want to.
+The AeroTower is designed to serve as an easy entry into the world of aeroponics. You can start at **low cost**, **modify** everything as you build it and finally **scale** the system up, if you want to.
 
 In its final form, the AeroTower should be completly **open source** (model, electronics, firmware), **self-sufficient** in terms of energy through a solar panel and connected like an IoT device.
 
-Below, you can see a rendering of the assembled model:
+Below, you can see a rendering of the assembled model and also am exploded view:
 
 <div style={{display: 'flex', flexWrap: 'wrap'}}>
   <ModelViewer
