--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -15,7 +15,7 @@ The AeroTower is designed to serve as an easy entry into the world of aeroponics
 
 In its final form, the AeroTower should be completly **open source** (model, electronics, firmware), **self-sufficient** in terms of energy through a solar panel and connected like an IoT device.
 
-Below, you can see a rendering of the assembled model and also am exploded view:
+Below, you can see a rendering of the assembled model as well as an exploded view:
 
 <div style={{display: 'flex', flexWrap: 'wrap'}}>
   <ModelViewer
