feat: add link to reference for quickstart

--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -29,7 +29,10 @@ Afterwards, create a file named `code.py` in the root folder of the device and a
 ## Assembly
 
 Once you have loaded the code onto the XIAO you can assemble the circuitry.
+
 This does not mean, that you cannot modify the code afterwards, it is just easier to start off this way.
+
+> If you know what you are doing, you can jump ahead to the [circuit reference](#reference)
 
 ### Seeed XIAO
 
@@ -129,7 +132,10 @@ Connect the other sides of the jumper wires to the according wires like [describ
 ![](../../public/aerotower/PXL_20230210_183232261.MP.jpg)
 
 Lastly, connect the grove cable to the grove connector on the module.
+
 Your breadboard should look like in the picture below.
+
+##### Reference
 
 ![](../../public/aerotower/PXL_20230210_183249546.jpg)
 
