add google site verification meta tag

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,12 @@
 import Link from 'next/link'
+import Head from 'next/head'
+
+<Head>
+  <meta
+    name='google-site-verification'
+    content='Qwc5o8zgc8dacKQuYC6xHKN9giGoYUmfQYngIo8MB7E'
+  />
+</Head>
 
 # Urban Smart Grow
 
