--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -10,42 +10,9 @@ The AeroTower is designed to serve as an easy entry into the world of aeroponics
 
 In its final form, the AeroTower should be completly **open source** (model, electronics, firmware), **self-sufficient** in terms of energy through a solar panel and connected like an IoT device.
 
-Below, you can see a rendering of the assembled model as well as an exploded view:
+Below, you can see a picture of the printed tower:
 
-<div style={{display: 'flex', flexWrap: 'wrap'}}>
-  <ModelViewer
-    style={{
-      flexBasis: '200px',
-      flex: 1,
-      width: '100%',
-      height: '400px',
-      top: 0,
-      left: 0,
-    }}
-    url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/assembly.stl'
-  />
-
-  <ModelViewer
-    style={{
-      flexBasis: '200px',
-      flex: 1,
-      width: '100%',
-      height: '400px',
-      top: 0,
-      left: 0,
-    }}
-    modelProps={{
-      color: 'teal',
-      positionX: 300,
-      positionY: 300,
-    }}
-    floorProps={{
-      gridLength: 600,
-      gridWidth: 600,
-    }}
-    url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/explosion.stl'
-  />
-</div>
+![](../../public/aerotower_showcase/PXL_20230504_074938323.jpg)
 
 ## Vertical Farming
 
