add discord widget for comments

--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -1,5 +1,6 @@
 import Code from '../../snippets/AeroTowerControllerCode.mdx'
 import { Callout } from 'nextra-theme-docs'
+import { AeroTowerDiscordWidget } from "../../components/AeroTowerDiscordWidget";
 
 # AeroTower Electronics
 
@@ -221,3 +222,7 @@ The USB port should still be visible, allowing you to power the device with any 
 You have built the electronics of the AeroTower. Now you can mount the head into the rest of the tower and test your setup.
 
 Happy growing!
+
+## Comments
+
+<AeroTowerDiscordWidget />
