--- a/pages/aerotower/models.mdx
+++ b/pages/aerotower/models.mdx
@@ -3,6 +3,7 @@ import {
   defaultPrintInstructions,
 } from '../../components/ModelViewer'
 import { BreakingChangeAlert } from '../../components/BreakingChangeAlert'
+import { AeroTowerDiscordWidget } from "../../components/AeroTowerDiscordWidget";
 
 # Models
 
@@ -90,3 +91,7 @@ Bridging between tank and tower module.
   url='https://raw.githubusercontent.com/urban-smart-grow/AeroTower/main/exports/head_electronics_lid.stl'
   printInstructions={defaultPrintInstructions}
 />
+
+## Comments
+
+<AeroTowerDiscordWidget />
