add discord button and separate channels for every page

--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -1,6 +1,6 @@
 import Code from '../../snippets/AeroTowerControllerCode.mdx'
 import { Callout } from 'nextra-theme-docs'
-import { AeroTowerDiscordWidget } from "../../components/AeroTowerDiscordWidget";
+import { AeroTowerDiscordWidget, aerotower_electronics } from "../../components/AeroTowerDiscordWidget";
 
 # AeroTower Electronics
 
@@ -225,4 +225,4 @@ Happy growing!
 
 ## Comments
 
-<AeroTowerDiscordWidget />
+<AeroTowerDiscordWidget channel={aerotower_electronics} />
