--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -1,7 +1,7 @@
 import Link from "next/link";
 import VerticalFarming from "../../snippets/VerticalFarming.mdx";
 import { ModelViewer } from "../../components/ModelViewer";
-import { AeroTowerDiscordWidget } from "../../components/AeroTowerDiscordWidget";
+import { AeroTowerDiscordWidget, aerotower_comments } from "../../components/AeroTowerDiscordWidget";
 
 # AeroTower
 
@@ -59,4 +59,4 @@ To find the right light system for you, a good start could be to search for ligh
 
 ## Comments
 
-<AeroTowerDiscordWidget />
+<AeroTowerDiscordWidget channel={aerotower_comments} />
