--- a/pages/aerotower/models.mdx
+++ b/pages/aerotower/models.mdx
@@ -3,7 +3,7 @@ import {
   defaultPrintInstructions,
 } from '../../components/ModelViewer'
 import { BreakingChangeAlert } from '../../components/BreakingChangeAlert'
-import { AeroTowerDiscordWidget } from "../../components/AeroTowerDiscordWidget";
+import { AeroTowerDiscordWidget, aerotower_model } from "../../components/AeroTowerDiscordWidget";
 
 # Models
 
@@ -94,4 +94,4 @@ Bridging between tank and tower module.
 
 ## Comments
 
-<AeroTowerDiscordWidget />
+<AeroTowerDiscordWidget channel={aerotower_model}/>
