--- a/pages/aerotower/index.mdx
+++ b/pages/aerotower/index.mdx
@@ -30,7 +30,8 @@ For print instructions and previews, head over to the [models page](./aerotower/
 ## Electronics
 
 To build the electronics of the AeroTower, [please have a look here](aerotower/electronics).
-For the moment, the circuitry needs to be powered by an external power source. To become fully self sufficient, power supply by battery and solar is planned.
+The tower can be powered with USB-C or alternatively by solar, for which another module is needed.
+For building the solar module, please refer to the [build instructions found here](./aerotower/solar_module).
 
 ## Grow Media
 
