add link on electronics page

--- a/pages/aerotower/electronics.mdx
+++ b/pages/aerotower/electronics.mdx
@@ -220,6 +220,7 @@ The USB port should still be visible, allowing you to power the device with any 
 ## Congratulations!!
 
 You have built the electronics of the AeroTower. Now you can mount the head into the rest of the tower and test your setup.
+If you want to extend your tower further and power it by solar, you can look [at this page](./solar_module). 
 
 Happy growing!
 
